# achronyme-web

./: .env.example  .gitignore  .gitmodules  NOTICE  README.md  astro.config.mjs  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml  deploy.yml  docker-build.yml
deploy/: ach-server.env.example
deploy/nginx/: play.achrony.me.conf
deploy/systemd/: ach-server.service
public/: install.sh  robots.txt
public/wasm/: achronyme_wasm.js  achronyme_wasm_bg.wasm
scripts/: generate-wallpapers.py
server/: .dockerignore  Cargo.toml  Dockerfile
server/src/: circom_pipeline.rs  circom_witness.rs  error.rs  lib.rs  main.rs  pipeline.rs  prove_handler.rs  sandbox.rs  sanitize.rs  session.rs  templates.rs  workspace.rs
server/src/routes/: circuit.rs  compile.rs  format.rs  fs.rs  inspect.rs  mod.rs  prove.rs  run.rs  session.rs
server/tests/: integration.rs  integration_circom.rs  integration_circomlib_demo.rs  integration_circomlib_mimc.rs  integration_circomlib_sha256.rs  integration_template_circom.rs
src/components/: CodeExamples.astro  Comparison.astro  Features.astro  Footer.astro  Header.astro  Hero.astro  HeroCircuit.astro  Navbar.astro  PageGrid.astro  RoadmapTimeline.astro  Stats.astro  TerminalMockup.astro  TriArchitecture.astro
src/components/docs/: AchDiagram.astro  Aside.astro  DocLayout.astro  DocMobileNav.astro  DocPagination.astro  DocSidebar.astro  DocToc.astro  Mermaid.astro
src/content/: config.ts
src/content/docs-en/architecture/: akron-vm.mdx  artik-vm.mdx  ast-reference.mdx  backends.mdx  circom-frontend.mdx  crate-map.mdx  diagnostics.mdx  extension-guide.mdx  grammar.mdx  ir-and-optimization.mdx  lysis-vm.mdx  memory-and-gc.mdx  pipeline.mdx  prove-ir.mdx  vm-and-bytecode.mdx  witness-generation.mdx
src/content/docs-en/circom/: circuit-mode.mdx  diagnostics.mdx  importing.mdx  limitations.mdx  overview.mdx  vm-mode.mdx
src/content/docs-en/circuits/: builtins.mdx  control-flow.mdx  declarations.mdx  functions.mdx  operators-and-costs.mdx  overview.mdx  type-annotations.mdx
src/content/docs-en/cli/: circuit-options.mdx  commands.mdx  project-config.mdx
src/content/docs-en/getting-started/: editor-setup.mdx  hello-world.mdx  installation.mdx  introduction.mdx
src/content/docs-en/language/: arrays-and-collections.mdx  control-flow.mdx  diagnostics.mdx  error-handling.mdx  functions-and-closures.mdx  methods.mdx  modules.mdx  native-functions.mdx  types-and-values.mdx
src/content/docs-en/playground/: ide-features.mdx  overview.mdx  projects.mdx
src/content/docs-en/releases/: beta20.mdx  beta21.mdx  changelog.mdx
src/content/docs-en/tutorials/: bigint-arithmetic.mdx  inline-proofs.mdx  merkle-proof.mdx  poseidon-hashing.mdx  secret-voting.mdx
src/content/docs-en/zk-concepts/: field-elements.mdx  plonkish.mdx  proof-generation.mdx  r1cs.mdx
src/content/docs-es/architecture/: akron-vm.mdx  artik-vm.mdx  ast-reference.mdx  backends.mdx  circom-frontend.mdx  crate-map.mdx  diagnostics.mdx  extension-guide.mdx  grammar.mdx  ir-and-optimization.mdx  lysis-vm.mdx  memory-and-gc.mdx  pipeline.mdx  prove-ir.mdx  vm-and-bytecode.mdx  witness-generation.mdx
src/content/docs-es/circom/: circuit-mode.mdx  diagnostics.mdx  importing.mdx  limitations.mdx  overview.mdx  vm-mode.mdx
src/content/docs-es/circuits/: builtins.mdx  control-flow.mdx  declarations.mdx  functions.mdx  operators-and-costs.mdx  overview.mdx  type-annotations.mdx
src/content/docs-es/cli/: circuit-options.mdx  commands.mdx  project-config.mdx
src/content/docs-es/getting-started/: editor-setup.mdx  hello-world.mdx  installation.mdx  introduction.mdx
src/content/docs-es/language/: arrays-and-collections.mdx  control-flow.mdx  diagnostics.mdx  error-handling.mdx  functions-and-closures.mdx  methods.mdx  modules.mdx  native-functions.mdx  types-and-values.mdx
src/content/docs-es/playground/: ide-features.mdx  overview.mdx  projects.mdx
src/content/docs-es/releases/: beta20.mdx  beta21.mdx  changelog.mdx
src/content/docs-es/tutorials/: bigint-arithmetic.mdx  inline-proofs.mdx  merkle-proof.mdx  poseidon-hashing.mdx  secret-voting.mdx
src/content/docs-es/zk-concepts/: field-elements.mdx  plonkish.mdx  proof-generation.mdx  r1cs.mdx
src/data/: docs-sidebar.ts
src/i18n/: en.json  es.json  index.ts
src/layouts/: Layout.astro
src/lib/: achronyme-lang.js  achronyme-lsp.js  playground-filetree.js  playground-session.js  playground-tabs.js
src/lib/diagrams/: circom-frontend.ts  circom-overview.ts  compile-pipeline.ts  crate-map.ts  intro-pipeline.ts  lysis-architecture.ts
src/pages/: index.astro  playground.astro  roadmap.astro
src/pages/docs/: [...slug].astro
src/pages/es/: index.astro  roadmap.astro
src/pages/es/docs/: [...slug].astro
src/styles/: achronyme.tmLanguage.json  code-theme.json  global.css
