[package]
name = "ach-server"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
# Achronyme crates (from main repo).
# Pin to an explicit rev so `cargo build --locked` is reproducible even
# if upstream `main` advances between a push and this deploy.
# Bumped from a05f4db6 (beta.19) to c9f02ccf (beta.20) for circom support.
# Crate renames in beta.20: compiler → akronc (bytecode) + zkc (R1CS/Plonkish
# backends); vm → akron; new ir_forge sibling holds ProveIrCompiler/ProveIR.
akronc = { git = "https://github.com/achronyme/achronyme", rev = "c9f02ccf42fec6daf61c6f80d18110cc365f9a39" }
akron = { git = "https://github.com/achronyme/achronyme", rev = "c9f02ccf42fec6daf61c6f80d18110cc365f9a39" }
zkc = { git = "https://github.com/achronyme/achronyme", rev = "c9f02ccf42fec6daf61c6f80d18110cc365f9a39" }
memory = { git = "https://github.com/achronyme/achronyme", rev = "c9f02ccf42fec6daf61c6f80d18110cc365f9a39" }
ir = { git = "https://github.com/achronyme/achronyme", rev = "c9f02ccf42fec6daf61c6f80d18110cc365f9a39" }
ir-forge = { git = "https://github.com/achronyme/achronyme", rev = "c9f02ccf42fec6daf61c6f80d18110cc365f9a39" }
circom = { git = "https://github.com/achronyme/achronyme", rev = "c9f02ccf42fec6daf61c6f80d18110cc365f9a39" }
constraints = { git = "https://github.com/achronyme/achronyme", rev = "c9f02ccf42fec6daf61c6f80d18110cc365f9a39" }
achronyme-std = { git = "https://github.com/achronyme/achronyme", rev = "c9f02ccf42fec6daf61c6f80d18110cc365f9a39" }
achronyme-parser = { git = "https://github.com/achronyme/achronyme", rev = "c9f02ccf42fec6daf61c6f80d18110cc365f9a39" }

# Web framework
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "limit", "timeout"] }
tower_governor = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Proving backends (shared crate)
proving = { git = "https://github.com/achronyme/achronyme", rev = "c9f02ccf42fec6daf61c6f80d18110cc365f9a39" }

# Session management
dashmap = "6"
uuid = { version = "1", features = ["v4"] }
toml = "0.8"

# Encoding
base64 = "0.22"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
# Drive the axum Router from integration tests without a TCP listener.
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
