[package]
name = "ach-server"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
# Achronyme crates (from main repo).
# Pin to an explicit rev so `cargo build --locked` is reproducible even
# if upstream `main` advances between a push and this deploy.
# Tracks the beta.21 release tag — picks up the For-preserving library
# template dispatch and the walker fix that unblock SHA-256(N) for N < 64
# from `.ach prove` blocks.
akronc = { git = "https://github.com/achronyme/achronyme", rev = "99c50a9998a7ea245a4bf47d0c8882be1f3e49b6" }
akron = { git = "https://github.com/achronyme/achronyme", rev = "99c50a9998a7ea245a4bf47d0c8882be1f3e49b6" }
zkc = { git = "https://github.com/achronyme/achronyme", rev = "99c50a9998a7ea245a4bf47d0c8882be1f3e49b6" }
memory = { git = "https://github.com/achronyme/achronyme", rev = "99c50a9998a7ea245a4bf47d0c8882be1f3e49b6" }
ir = { git = "https://github.com/achronyme/achronyme", rev = "99c50a9998a7ea245a4bf47d0c8882be1f3e49b6" }
ir-forge = { git = "https://github.com/achronyme/achronyme", rev = "99c50a9998a7ea245a4bf47d0c8882be1f3e49b6" }
circom = { git = "https://github.com/achronyme/achronyme", rev = "99c50a9998a7ea245a4bf47d0c8882be1f3e49b6" }
constraints = { git = "https://github.com/achronyme/achronyme", rev = "99c50a9998a7ea245a4bf47d0c8882be1f3e49b6" }
diagnostics = { git = "https://github.com/achronyme/achronyme", rev = "99c50a9998a7ea245a4bf47d0c8882be1f3e49b6" }
achronyme-std = { git = "https://github.com/achronyme/achronyme", rev = "99c50a9998a7ea245a4bf47d0c8882be1f3e49b6" }
achronyme-parser = { git = "https://github.com/achronyme/achronyme", rev = "99c50a9998a7ea245a4bf47d0c8882be1f3e49b6" }

# Web framework
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "limit", "timeout"] }
tower_governor = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Proving backends (shared crate)
proving = { git = "https://github.com/achronyme/achronyme", rev = "99c50a9998a7ea245a4bf47d0c8882be1f3e49b6" }

# Session management
dashmap = "6"
uuid = { version = "1", features = ["v4"] }
toml = "0.8"

# Encoding
base64 = "0.22"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
# Drive the axum Router from integration tests without a TCP listener.
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
